Refactor notification service and enhance WebSocket integration
- Introduced a new notification service for handling WebSocket notifications, improving the structure and clarity of the notification flow.
- Updated existing notification services (Attachment, Comment, Task, User) to utilize the new notification model and mapper for consistency.
- Enhanced error handling in Kafka event handlers to log success and failure messages for better traceability.
- Modified Docker and application configuration files to ensure proper service communication and health checks.
- Added WebSocket security configurations and refined CORS settings for improved client interactions.